force-app/core/objects/Weighing__c/Weighing__c.object-meta.xml
<CustomObject>
    <label>Weighing</label>
    <nameField>
        <displayFormat>W-{0000}</displayFormat>
        <label>Weighing</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weighings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>