force-app/core/objects/Weighing__c/fields/Baby__c.field-meta.xml
<CustomField>
    <fullName>Baby__c</fullName>
    <label>Baby</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Weighings</relationshipLabel>
    <relationshipName>Weighings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>