force-app/core/objects/Weighing__c/fields/Feeding__c.field-meta.xml
<CustomField>
    <fullName>Feeding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feeding</label>
    <referenceTo>Feeding__c</referenceTo>
    <relationshipLabel>Related Weighings</relationshipLabel>
    <relationshipName>Weighings</relationshipName>
    <type>Lookup</type>
</CustomField>