force-app/core/objects/Weighing__c/fields/InitialWeight__c.field-meta.xml
<CustomField>
    <fullName>InitialWeight__c</fullName>
    <inlineHelpText>Initial Weight in Grams</inlineHelpText>
    <label>Initial Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>