force-app/core/objects/Weighing__c/fields/Occurred__c.field-meta.xml
<CustomField>
    <fullName>Occurred__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Occurred</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>