force-app/core/objects/Weighing__c/fields/PercentWeightGainFromFeeding__c.field-meta.xml
<CustomField>
    <fullName>PercentWeightGainFromFeeding__c</fullName>
    <formula>IF(
AND(
NOT(ISBLANK(InitialWeight__c)),
NOT(ISBLANK(PostFeedingWeight__c)),
InitialWeight__c &gt; 0),
WeightGainFromFeeding__c/InitialWeight__c,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Weight Gain From Feeding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>