force-app/core/objects/Weighing__c/fields/PercentWeightGainSinceBirth__c.field-meta.xml
<CustomField>
    <fullName>PercentWeightGainSinceBirth__c</fullName>
    <formula>IF(
AND(
NOT(ISBLANK(Baby__r.BirthWeight__c)),
WeightGainSinceBirth__c &gt; 0),
WeightGainSinceBirth__c/Baby__r.BirthWeight__c,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Weight Gain Since Birth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>