force-app/core/objects/Weighing__c/fields/PostFeedingWeight__c.field-meta.xml
<CustomField>
    <fullName>PostFeedingWeight__c</fullName>
    <inlineHelpText>Post-Feeding Weight in Grams</inlineHelpText>
    <label>Post-Feeding Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>