force-app/core/objects/Weighing__c/fields/WeightGainFromFeeding__c.field-meta.xml
<CustomField>
    <fullName>WeightGainFromFeeding__c</fullName>
    <formula>IF(
AND(
NOT(ISBLANK(InitialWeight__c)),
NOT(ISBLANK(PostFeedingWeight__c))),
PostFeedingWeight__c-InitialWeight__c,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weight Gain From Feeding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>