force-app/core/objects/Weighing__c/fields/WeightGainSinceBirth__c.field-meta.xml
<CustomField>
    <fullName>WeightGainSinceBirth__c</fullName>
    <formula>IF(
AND(
NOT(ISBLANK(Baby__r.BirthWeight__c)),
NOT(ISBLANK(PostFeedingWeight__c))),
PostFeedingWeight__c - Baby__r.BirthWeight__c,
IF(
AND(
NOT(ISBLANK(Baby__r.BirthWeight__c)),
NOT(ISBLANK(InitialWeight__c))),
InitialWeight__c - Baby__r.BirthWeight__c,
0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weight Gain Since Birth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>